--- a/assets/css/bootstrap4-add-on.css
+++ b/assets/css/bootstrap4-add-on.css
@@ -67,15 +67,6 @@
     --gray-dark: #343a40;
     --light-gray: #f7f9f9;
     --dark-viridian: #2c3e50;
-    --facebook: #2874a6;
-    --twitter: #5dade2;
-    --pinterest: #b03a2e;
-    --google-plus: #e74c3c;
-    --instagram: #af7ac5;
-    --dribbble: #cd6155;
-    --youtube: #cb4335;
-    --vimeo: #85c1e9;
-    --stumbleupon: #e67e22;
     --primary: #3498db;
     --secondary: #45b39d;
     --success: #2ecc71;
@@ -98,8 +89,10 @@
     --breakpoint-md: 768px;
     --breakpoint-lg: 992px;
     --breakpoint-xl: 1200px;
-    --font-family-sans-serif: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-    --font-family-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+    --breakpoint-sm-max: 576px;
+    --breakpoint-md-max: 768px;
+    --breakpoint-lg-max: 992px;
+    --breakpoint-xl-max: 1200px;
 }
 
 /* Base Font */
@@ -164,7 +157,6 @@ footer .col {
 
 .bs4 a {
     text-decoration: none;
-    background-color: transparent;
 }
 
 .bs4 a:hover, .bs4 a:focus {
@@ -456,6 +448,13 @@ svg {
         max-width: 50%;
     }
 
+    .col-md-8 {
+        -webkit-box-flex: 0;
+        -ms-flex: 0 0 66.66667%;
+        flex: 0 0 66.66667%;
+        max-width: 66.66667%;
+    }
+
     .order-md-1 {
         order: 1;
     }
@@ -504,6 +503,13 @@ svg {
         -ms-flex: 0 0 50%;
         flex: 0 0 50%;
         max-width: 50%;
+    }
+
+    .bs4.col-lg-8 {
+        -webkit-box-flex: 0;
+        -ms-flex: 0 0 66.66667%;
+        flex: 0 0 66.66667%;
+        max-width: 66.66667%;
     }
 
     .bs4.col-lg-9 {
@@ -670,7 +676,10 @@ svg {
 }
 
 .align-items-center {
+    -webkit-box-align: center !important;
+    -ms-flex-align: center !important;
     align-items: center !important;
+}
 }
 
 
