--- a/assets/css/content-pg-bs4-big.css
+++ b/assets/css/content-pg-bs4-big.css
@@ -82,24 +82,44 @@
 
 
 
-main-content {
-    font-family: "Muli", "Verdana", "Avenir", "Tahoma", sans-serif;
+.main-content {
+    font-family: "Muli", "Avenir", "Tahoma", sans-serif;
 }
 
-body p {
-font-family: "Muli", "Verdana", "Avenir", "Tahoma", sans-serif;
+.content-page {
+    font-size: 16px;
+}
+
+.content-page p {
+font-family: "Muli", sans-serif;
     font-weight: 300;
-    letter-spacing: 0.05px;
+    letter-spacing: 0.08px;
+    line-height: 1.5;
+    font-size: 18.5px;
+    color: #000;
+    word-spacing: 0.5px;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    font-smoothing: antialiased;
+    text-rendering: optimizeLegibility;
+}
+
+/* Smaller Font */
+.smaller-font p {
+font-family: "Muli", "Avenir", "Tahoma", sans-serif;
+    font-weight: 300;
+letter-spacing: 0.06px;
     line-height: 1.5;
     font-size: 18px;
-    color: #0e1010;
-    word-spacing: 0.38px;
-    -webkit-text-stroke: 0.3px rgba(0, 0, 0, 0.4);
+color: #000;
+    word-spacing: 0.4px;
+    -webkit-text-stroke: 0.38px rgba(0, 0, 0, 0.3);
     -webkit-font-smoothing: antialiased;
--moz-osx-font-smoothing: grayscale;
-font-smoothing: antialiased;
-text-rendering: optimizeLegibility;
+    -moz-osx-font-smoothing: grayscale;
+    font-smoothing: antialiased;
+    text-rendering: optimizeLegibility;
 }
+
 
 section {
     position: relative;
@@ -243,10 +263,6 @@ section {
 /*** Info Content Page ***/
 /* Content Layout */
 
-.content-page {
-    font-size: 16px;
-}
-
 .content-page .content-section #content-nav,
 .content-page .content-section .main-content {
     top: -54px;
@@ -281,8 +297,12 @@ section {
 }
 
 .column-element {
-    padding: 25px;
+    padding: 3.5vh 10%;
     margin-bottom: 30px;
+}
+
+.element-section {
+    padding: 80px 0;
 }
 
 /* Responsive Content Navigation */
@@ -329,6 +349,11 @@ section {
         top: 25px;
         z-index: 1020;
         padding: 12% 0;
+    }
+
+    .column-element {
+        padding: 47px;
+        margin-bottom: 30px;
     }
 
     .content-page #content-nav .list-group-item {
@@ -636,7 +661,7 @@ font-family: "Montserrat", 'Verdana', 'Avenir', 'Tahoma', sans-serif;
     .flip-container .img-wrapper .back .content-wrapper h4 {
         font-size: 20px;
     }
-    body p {
+    .content-page p {
         font-weight: 400;
         letter-spacing: -0.02px;
         word-spacing: 0.4px;
