--- a/assets/css/homenet-text.css
+++ b/assets/css/homenet-text.css
@@ -49,5 +49,44 @@ h4.section-title {
     content: '';
 }
 
+.element-title {
+color: #394649;
+font-family: var(--font-secondary);
+    font-size: 22px;
+	font-weight: 700;
+
+
+text-align: center;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+	display: flex;
+
+
+
+    margin-right: auto;
+    margin-bottom: 100px;
+    margin-left: auto;
+}
+
+.element-title:before,
+.element-title:after {
+    content: " ";
+    width: 80px;
+    height: 1px;
+    background-color: var(--default-border);
+    background-color:  #394649;
+}
+
+.element-title:before {
+    margin-right: 20px;
+}
+
+.element-title:after {
+    margin-left: 20px;
+}
 
 
