--- a/homepage/css/style.css
+++ b/homepage/css/style.css
@@ -1081,7 +1081,7 @@ position: relative;
     .sec6_col p span{font-size:0; transition:all ease-in-out 0.3s;}
     .sec6_col p span br{display:none;}
     /* ==== Section 6 Read More Toggle code === */
-    .sec6_col label:after{content:'READ MORE..'; display:block; color:#0f4e5a; font-size: 4.4vw;
+    .sec6_col label:after{content:'READ MORE'; display:block; color:#0f4e5a; font-size: 4.4vw;
     font-weight: 700;
     padding-top: 2vw;
     cursor: pointer;}
